# glskel

./: .gitmodules  CMakeLists.txt
src/: glskel.cpp
